Scenarios/AKS-Secure-Baseline-PrivateCluster/Apps/eshopLegacyApp/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "eshop-win-mvc"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "eshop-win-mvc"
  template:
    metadata:
      labels:
        app: "eshop-win-mvc"
    spec:
      nodeSelector:
        "kubernetes.azure.com/os-sku": Windows2022
      securityContext:
            windowsOptions:
              gmsaCredentialSpecName: <Your GMSA Spec Name> # Name of GMSA cred spec 
      containers:
        - name: "eshop-win-mvc"
          image: <Your Image Name> # Image tag reference
          ports:
          - containerPort: 80
          imagePullPolicy: Always
